docs: 시연시나리오

--- a/exec/시연시나리오.md
+++ b/exec/시연시나리오.md
@@ -3,7 +3,9 @@
 !["메인페이지1"](img/시연시나리오/시연시나리오1_메인페이지.JPG)
 
 #### 스터디 - 스터디를 검색하고 조회할 수 있는 페이지로 이동합니다.
+
 #### 커뮤니티 - 게시판 페이지로 이동합니다.
+
 #### 로그인/ 회원가입 - 소셜로그인이 가능한 페이지로 이동합니다.
 
 # 로그인화면
@@ -13,7 +15,9 @@
 #### 뷰잉로고 - 메인페이지로 이동합니다.
 
 #### Kakao로 시작하기 - 카카오 소셜 로그인 페이지로 이동합니다.
+
 #### Google로 시작하기 - 구글 소셜 로그인 페이지로 이동합니다.
+
 #### Github로 시작하기 - 깃허브 소셜 로그인 페이지로 이동합니다.
 
 # 소셜 로그인
@@ -21,6 +25,7 @@
 ## 카카오 로그인
 
 !["카카오로그인"](img/시연시나리오/시연시나리오3_카카오소셜로그인.JPG)
+
 #### 카카오 로그인창 - 로그인을 완료할시에 메인페이지로 리다이렉트합니다.
 
 ## 로그인 로딩
@@ -28,6 +33,7 @@
 !["로그인 로딩"](img/시연시나리오/시연시나리오4_로그인로딩.JPG)
 
 #### 로딩 페이지 - 메인페이지로 리다이렉트 과정에서 로그인 로딩시에 생기는 화면입니다.
+
 # 스터디 검색창
 
 ## 추천 스터디 클릭
@@ -36,96 +42,576 @@
 !["추천 스터디"](img/시연시나리오/시연시나리오5_추천스터디부분.JPG)
 
 #### 추천스터디 - 현재 면접스터디에서 인기 있는 회사들의 목록입니다.
+
 #### 회사명 클릭시 해당 회사를 대상으로 한 스터디 검색 결과 페이지 이동합니다.
+
 ### 삼성 SDS 클릭시
+
 !["추천 스터디 검색 결과"](img/시연시나리오/시연시나리오5_추천스터디검색결과.JPG)
+
 #### 삼성SDS에 해당하는 스터디들이 카드뷰로 보여지게 됩니다.
+
 #### 검색결과에서도 상단에 위치한 검색창에서 회사명을 바꾼후 엔터로도 다른 검색결과로 이동할 수 있습니다.
 
 ## 스터디 결과 카드뷰
+
 !["카드뷰"](img/시연시나리오/시연시나리오5_카드뷰.JPG)
+
 #### 우측 상단의 책갈피 표시를 통해 해당 스터디를 찜 할수 있습니다.
+
 !["카드뷰_책갈피"](img/시연시나리오/시연시나리오5_카드뷰_책갈피.JPG)
+
 #### 아래에는 회사명, 직무, 경력수준 에 대해 표시됩니다.
+
 !["카드뷰_회사명_직무_경력수준"](img/시연시나리오/시연시나리오5_카드뷰_회사명_직무_경려수준.JPG)
+
 #### 그 아래에는 스터디 제목이 표시됩니다.
+
 !["카드뷰_스터디명"](img/시연시나리오/시연시나리오5_카드뷰_스터디명.JPG)
+
 #### 하단에는 스터디에 대한 태그들이 표시됩니다.
+
 !["카드뷰_태그"](img/시연시나리오/시연시나리오5_카드뷰_태그.JPG)
+
 #### 가장 아래에는 스터디장의 간단한 프로필과 현재 스터디원에 대한 정보가 표시됩니다.
+
 !["카드뷰_하단"](img/시연시나리오/시연시나리오5_카드뷰_하단.JPG)
+
 ## 검색을 통한 결과
+
 !["스터디 검색 결괴"](img/시연시나리오/시연시나리오6_검색결과.JPG)
+
 #### 회사명으로 삼성전자를 검색했을때의 결과입니다. 삼성전자에 해당하는 스터디들이 보여지게 됩니다.
+
 #### 상단의 스터디 탭을 클릭해보겠습니다.
 
 ## 스터디탭을 통한 화면
+
 !["스터디 검색 결과 상단"](img/시연시나리오/시연시나리오7_스터디탭.JPG)
 
 #### 스터디탭을 클릭하면 모든 스터디 결과들을 카드뷰로 최신순으로 페이지네이션하여 보여지게됩니다.
 
 !["스터디 검색 결과 하단"](img/시연시나리오/시연시나리오7_스터디탭하단.JPG)
+
 ## 스터디 검색탭의 자동완성 드롭박스
+
 !["스터디 회사이름 검색 자동완성"](img/시연시나리오/시연시나리오8_스터디회사이름검색자동완성.JPG)
+
 #### 스터디 검색탭에서 회사를 입력할때 회사이름 자동완성을 지원합니다.
+
 #### 회사이름 목록을 방향키를 통해 선택하거나 마우스로 클릭하게 되면 회사이름이 자동완성됩니다.
 
 ## 스터디 검색탭의 신입/경력/무관 드롭박스
+
 #### 검색탭에서 경력 수준에 대해 검색 할 수 있습니다.
+
 #### 크게 인턴/신입/경력/전체 가 있습니다.
+
 !["스터디 경력수준 검색 드롭박스"](img/시연시나리오/시연시나리오9_경력드롭박스.JPG)
+
 #### 이는 드롭박스를 통해 구현했습니다.
+
 ## 직무 비우고 검색 (직무 무관)
+
 !["스터디 직무 무관 검색"](img/시연시나리오/시연시나리오10_직무무관검색.JPG)
+
 #### 검색조건에서 직무를 입력하지 않으면 직무에 상관없이 스터디를 검색합니다.
+
 ## 직무가 포함된 검색
+
 #### 검색조건에 직무가 포함되어 있습니다.
+
 !["스터디 직무 포함 검색"](img/시연시나리오/시연시나리오11_직무검색.JPG)
+
 #### 만약 좀 더 구체적인 범위의 면접 스터디를 원하시면 해당 직무에 대한 면접스터디를 검색하실 수 있습니다.
 
 ## 태그를 통한 검색
+
 !["스터디 직무 무관 검색"](img/시연시나리오/시연시나리오10_직무무관검색.JPG)
+
 #### 스터디에 해당하는 '태그'를 통해 검색이 가능합니다.
+
 #### 검색탭 아래에 있는 태그들 중 하나를 클릭하시면 됩니다.
+
 !["스터디 태그 검색"](img/시연시나리오/시연시나리오12_태그검색.JPG)
+
 ## 스터디가 존재하지 않는 경우 스터디 생성
+
 !["스터디 없음"](img/시연시나리오/시연시나리오13_스터디없음.JPG)
+
 #### 원하는 스터디가 없는 경우 검색탭 왼쪽에 있는 스터디 생성하기를 통해 스터디를 생성 할 수 있습니다.
+
 ## 스터디 생성 페이지
+
 !["스터디 생성 페이지 상"](img/시연시나리오/시연시나리오13_스터디생성페이지상단.JPG)
 !["스터디 생성 페이지 하"](img/시연시나리오/시연시나리오13_스터디생성페이지하단.JPG)
-#### 스터디를 생성하기 위해 기본정보들을 입력해야합니다.
-#### 지원회사는 검색탭과 마찬가지로 드롭박스 자동완성을 지원합니다.
-!["스터디 생성 페이지 드롭박스"](img/시연시나리오/시연시나리오13_스터디생성페이지_지원회사.JPG)
-#### 지원 직무를 비워둔다면 직무에 상관없이 모집하는 스터디가 됩니다.
-#### 경력수준도 마찬가지로 드롭박스로 선택할 수 있습니다.
-!["스터디 생성 페이지 마감일"](img/시연시나리오/시연시나리오13_마감일.JPG)
-#### 스터디 모집 마감일을 선택할 수 있습니다.
-#### 오늘보다 과거 시간은 설정되지 않습니다.
-!["스터디 생성 페이지 최대 인원"](img/시연시나리오/시연시나리오13_최대인원.JPG)
-#### 스터디의 최대인원을 설정 할 수 있습니다.
-!["스터디 생성 페이지 하단"](img/시연시나리오/시연시나리오13_제목내용태그.JPG)
-#### 스터디 검색결과에 노출될 스터디명, 스터디 소개글, 그리고 스터디에서 지향하는 '태그'를 선택하여 생성 할 수 있습니다.
-#### 위에서 말한 정보들을 입력한후 스터디 생성하기 버튼을 누르면 생성이 완료됩니다.
-!["스터디 생성하기 카드뷰 결과"](img/시연시나리오/시연시나리오13_스터디생성완료.JPG)
-## 다른 스터디 신청
-!["스터디 검색 결과"](img/시연시나리오/시연시나리오7_스터디탭.JPG)
-#### 스터디 검색결과에서 가입하지 않은 스터디를 클릭하면 스터디 정보 페이지로 이동합니다.
-#### 이 페이지에선 스터디에 대한 상세한 정보와 신청하기 버튼이 있습니다.
-!["스터디 상세 정보"](img/시연시나리오/시연시나리오14_스터디_카드뷰_상세페이지.JPG)
-#### 신청하기 버튼을 클릭하면 해당 스터디에 신청할 수 있는 창이 생깁니다.
-!["스터디 신청"](img/시연시나리오/시연시나리오14_스터디신청.JPG)
-## 이전에 생성한 스터디 페이지
-#### 이전에 생성한 스터디의 카드뷰를 클릭해보겠습니다.
-#### 스터디 페이지로 이동하게 됩니다.
-# 스터디 페이지
-## 스터디 정보
-#### 카드뷰를 클릭해 스터디페이지에 들어가게 됐다면 스터디 정보 페이지를 볼 수 있습니다.
-!["스터디 정보"](img/시연시나리오/시연시나리오15_스터디관리.JPG)
-#### 스터디장 입장에서는 회원목록 
 
-#### 스터디원 입장에서는 스터디에 대한 정보들만 보이게 됩니다.
+#### 스터디를 생성하기 위해 기본정보들을 입력해야합니다.
+
+#### 지원회사는 검색탭과 마찬가지로 드롭박스 자동완성을 지원합니다.
+
+!["스터디 생성 페이지 드롭박스"](img/시연시나리오/시연시나리오13_스터디생성페이지_지원회사.JPG)
+
+#### 지원 직무를 비워둔다면 직무에 상관없이 모집하는 스터디가 됩니다.
+
+#### 경력수준도 마찬가지로 드롭박스로 선택할 수 있습니다.
+
+!["스터디 생성 페이지 마감일"](img/시연시나리오/시연시나리오13_마감일.JPG)
+
+#### 스터디 모집 마감일을 선택할 수 있습니다.
+
+#### 오늘보다 과거 시간은 설정되지 않습니다.
+
+!["스터디 생성 페이지 최대 인원"](img/시연시나리오/시연시나리오13_최대인원.JPG)
+
+#### 스터디의 최대인원을 설정 할 수 있습니다.
+
+!["스터디 생성 페이지 하단"](img/시연시나리오/시연시나리오13_제목내용태그.JPG)
+
+#### 스터디 검색결과에 노출될 스터디명, 스터디 소개글, 그리고 스터디에서 지향하는 '태그'를 선택하여 생성 할 수 있습니다.
+
+#### 위에서 말한 정보들을 입력한후 스터디 생성하기 버튼을 누르면 생성이 완료됩니다.
+
+!["스터디 생성하기 카드뷰 결과"](img/시연시나리오/시연시나리오13_스터디생성완료.JPG)
+
+## 다른 스터디 신청
+
+!["스터디 검색 결과"](img/시연시나리오/시연시나리오7_스터디탭.JPG)
+
+#### 스터디 검색결과에서 가입하지 않은 스터디를 클릭하면 스터디 정보 페이지로 이동합니다.
+
+#### 이 페이지에선 스터디에 대한 상세한 정보와 신청하기 버튼이 있습니다.
+
+!["스터디 상세 정보"](img/시연시나리오/시연시나리오14_스터디_카드뷰_상세페이지.JPG)
+
+#### 신청하기 버튼을 클릭하면 해당 스터디에 신청할 수 있는 창이 생깁니다.
+
+!["스터디 신청"](img/시연시나리오/시연시나리오14_스터디신청.JPG)
+
+## 이전에 생성한 스터디 페이지
+
+#### 이전에 생성한 스터디의 카드뷰를 클릭해보겠습니다.
+
+#### 스터디 페이지로 이동하게 됩니다.
+
+# 스터디 페이지
+
+## 스터디 정보
+
+#### 카드뷰를 클릭해 스터디페이지 갈 수 있습니다.
+
+#### 스터디장에게는 스터디 관리 페이지가 첫 페이지로 보이게됩니다.
+
+!["스터디 정보"](img/시연시나리오/시연시나리오15_스터디관리.JPG)
+
+#### 이 페이지에서 스터디에 관련된 정보들을 변경 할 수 있습니다.
 
 #### 스터디장은 위 페이지에서 최대인원, 마감일, 스터디 제목, 스터디 소개글, 태그등을 변경하고 이를 반영할 수 있습니다. 또한 스터디를 삭제 할 수 있습니다.
 
-## 스터디 
+!["스터디 관리"](img/시연시나리오/시연시나리오15_스터디관리하단.JPG)
+
+## 스터디 참여신청 관리
+
+#### 스터디장에겐 스터디 페이지 좌측 사이드바에서 참여신청관리가 보이게 됩니다.
+
+!["스터디 참여신청 관리"](img/시연시나리오/시연시나리오16_참여신청관리.JPG)
+
+#### 이 페이지에서는 해당 스터디에 대한 참가신청들이 보이게 됩니다.
+
+#### 이 페이지에서 참여신청들을 수락할 수 있고 거절할 수 있습니다.
+
+#### 참여신청중 하나를 승인해보겠습니다.
+
+!["스터디 참여신청 승인"](img/시연시나리오/시연시나리오16_참여신청승인.JPG)
+
+#### 승인한 멤버는 스터디 관리에서 확인 할 수 있습니다.
+
+!["스터디 참여신청 승인 멤버관리"](img/시연시나리오/시연시나리오16_멤버관리.JPG)
+
+## 스터디 탈퇴
+
+#### 좌측 사이드바에 탈퇴하기를 클릭하면 스터디 탈퇴를 할 수 있습니다.
+
+#### 스터디장은 스터디를 탈퇴할 수 없습니다.
+
+!["스터디 탈퇴하기"](img/시연시나리오/시연시나리오17_스터디장탈퇴.JPG)
+
+## 스터디원 추방
+
+#### 다시 스터디 관리로 돌아가 회원목록을 확인하면 스터디원 닉네임 옆에 추방하기 버튼이 잇습니다.
+
+#### 해당 버튼을 클릭하면 스터디원 추방을 진행 할 수 있습니다.
+
+!["스터디원 추방"](img/시연시나리오/시연시나리오18_스터디원추방.JPG)
+
+#### 회원목록에서 사라진 모습을 볼 수 있습니다.
+
+!["스터디원 추방"](img/시연시나리오/시연시나리오18_스터디원추방확인후.JPG)
+
+## 스터디장 위임
+
+#### 회원목록에서 추방하기 버튼 왼쪽에 스터디장 위임 버튼이 있습니다.
+
+#### 해당 버튼을 클릭하면 스터디원에게 스터디장을 위임 할 수 있습니다.
+
+!["스터디장 위임"](img/시연시나리오/시연시나리오19_스터디장위임.JPG)
+
+#### 회원목록에서 스터디장 표시가 위임한 스터디원에게 표시되며 사이드바, 표시되는 정보와 버튼 등이 바뀐 모습을 볼 수 있습니다.
+
+!["스터디장 위임 후"](img/시연시나리오/시연시나리오19_스터디장위임후.JPG)
+
+#### 뷰잉은 스터디원과 스터디장에게 스터디 페이지에서 다른 UI를 제공합니다.
+
+# 스터디원 시점
+
+## 스터디 정보
+
+#### 스터디장입장에서는 회원 목록에 표시됐던 스터디장 위임,추방 버튼이 사라지고 스터디 정보들도 수정 할 수 없게 변경됩니다.
+
+!["스터디장 위임 후"](img/시연시나리오/시연시나리오19_스터디장위임후.JPG)
+
+#### 아래가 스터디장 입장에서의 스터디 페이지 사이드바이고
+
+!["스터디장 사이드바](img/시연시나리오/시연시나리오20_사이드바_스터디장.JPG)
+
+#### 아래가 스터디원 입장에서의 스터디 페이지 사이드입니다.
+
+!["스터디원 사이드바"](img/시연시나리오/시연시나리오20_사이드바_스터디원.JPG)
+
+## 스터디 캘린더
+
+#### 스터디 캘린더에서는 스터디원들의 일정을 전부 모아서 볼 수 있습니다.
+
+#### 각 개인 일정들이 한눈에 볼 수 있게 표시되어 스터디원 일정을 한눈에 파악 할 수 있습니다.
+
+!["스터디 캘린더"](img/시연시나리오/시연시나리오21_스터디_캘린더.JPG)
+
+#### 또한 스터디 공통의 일정을 여기서 등록 할 수 있습니다.
+
+#### 스터디 일정 추가 버튼을 눌러 스터디 공통의 일정 추가를 진행 할 수 있습니다.
+
+!["스터디 캘린더 일정 추가"](img/시연시나리오/시연시나리오21_스터디_캘린더_일정추가.JPG)
+
+!["스터디 캘린더 일정"](img/시연시나리오/시연시나리오21_스터디_캘린더_일정.JPG)
+
+#### 캘린더를 확인하면 빨간색은 개인일정 파란색은 스터디 공통의 일정입니다.
+
+## 스터디 게시판
+
+#### 좌측 사이드바에서 스터디 게시판을 클릭하면 스터디 게시판 페이지로 이동합니다.
+
+#### 스터디 게시판은 스터디원들끼리의 공유하는 게시판입니다.
+
+!["스터디 게시판 목록"](img/시연시나리오/시연시나리오22_스터디게시판_목록.JPG)
+
+#### 글쓰기 버튼을 통해 게시판에 글을 등록 할 수 있습니다.
+
+!["스터디 게시판 글쓰기"](img/시연시나리오/시연시나리오22_스터디게시판_작성페이지.JPG)
+
+#### 위는 작성페이지로 제목,내용을 쓸 수 있고 파일 업로드를 통해 자료를 게시글에 첨부 할 수 있습니다.
+
+#### 파일은 최대 3개 50MB까지 가능합니다.
+
+!["스터디 게시판 상세조회"](img/시연시나리오/시연시나리오22_스터디게시판_상세조회.JPG)
+
+#### 아래처럼 게시글을 생성하면 생성한 게시글 페이지로 이동합니다.
+
+## 스터디 게시글 댓글
+
+#### 스터디 게시글에는 댓글을 달 수 있습니다.
+
+!["스터디 게시판 댓글 작성"](img/시연시나리오/시연시나리오23_게시글_댓글_작성.JPG)
+
+#### 위와 같이 댓글을 작성한후 등록버튼을 누르게 되면
+
+!["스터디 게시판 댓글 작성후"](img/시연시나리오/시연시나리오23_게시글_댓글_작성후.JPG.JPG)
+
+#### 댓글이 작성됩니다.
+
+## 스터디 게시글 대댓글
+
+!["스터디 게시판 대댓글 작성"](img/시연시나리오/시연시나리오24_게시글_대댓글_작성.JPG)
+
+#### 댓글에는 답장을 한다는 의미로 대댓글을 작성 할 수 있습니다.
+
+#### 해당 댓글 밑에 생기는 입력창에 대댓글을 작성한 후 등록버튼을 누르게 되면
+
+!["스터디 게시판 대댓글 작성 후"](img/시연시나리오/시연시나리오24_게시글_대댓글_작성후.JPG)
+
+#### 대댓글이 작성됩니다.
+
+## 스터디 채팅
+
+#### 좌측 사이드바에 스터디 채팅을 클릭하면 스터디원들끼리 공유하는 채팅 페이지로 이동합니다.
+
+#### 해당 페이지에서는 게시글로 하기 힘든 대화나 정보공유를 실시간 채팅을 통해 자유롭게 진행 할 수 있습니다.
+
+!["스터디 채팅"](img/시연시나리오/시연시나리오25_스터디_채팅.JPG)
+
+## 영상 회의
+
+#### 저희 스터디페이지에서는 자체적으로 스터디마다 화상 면접 스터디, 간단한 회의 진행을 위해 영상회의 기능을 제공합니다.
+
+!["영상회의"](img/시연시나리오/시연시나리오40_영상회의탭.JPG)
+
+#### 회의 입장을 누르게 된다면 준비화면으로 넘어가게 됩니다.
+
+#### 마이크와 캠을 선택하거나 테스트하며 준비를 한 후 입장버튼을 누르면 영상회의에 입장할 수 있습니다.
+
+!["영상회의"](img/시연시나리오/시연시나리오40_영상회의준비.JPG)
+
+#### 기본적으로 영상회의는 레이아웃 보기입니다. 모든 참여자가 같은 크기의 화면을 갖습니다.
+
+!["영상회의"](img/시연시나리오/시연시나리오40_영상_레이아웃보기.png)
+
+#### 나 중심보기에서는 영상회의에서의 내 화면이 다른 참여자보다 커지게 됩니다.
+
+!["영상회의"](img/시연시나리오/시연시나리오40_영상_나중심보기.png)
+
+#### 면접스터디에서 유용하게 사용할 타이머 기능을 제공합니다. 1분/3분 자기소개, 답변의 길이를 확인할때 사용하실 수 있습니다.
+
+!["영상회의"](img/시연시나리오/시연시나리오40_영상_타이머_하이라이트.png)
+
+#### 타이머를 시작하게되면 타이머가
+
+!["영상회의"](img/시연시나리오/시연시나리오40_타이머시작.png)
+!["영상회의"](img/시연시나리오/시연시나리오40_타이머중지.png)
+
+#### 영상회의에는 자체적으로 채팅을 제공합니다. 말로 표현하기 어려운 부분이나 간단한 기록, 소통을 위해 추가했습니다.
+
+!["영상회의"](img/시연시나리오/시연시나리오40_영상_채팅.png)
+
+#### 저희는 면접 스터디에서 핵심인 피드백을 자체적으로 제공합니다.
+
+#### 참여자는 화상 면접 스터디가 진행되는 동안 다른 참여자들에게 실시간으로 피드백을 보낼 수 있습니다.
+
+#### 이 피드백들은 실시간으로 기록되며 참여자가 영상회의에서 나갈때 다른 참여자가 본인에게 해준 피드백을 확인할 수 있습니다.
+
+!["영상회의"](img/시연시나리오/시연시나리오40_피드백보내기.png)
+!["영상회의"](img/시연시나리오/시연시나리오40_피드백결과.png)
+
+# 커뮤니티
+
+## 게시판 종류
+
+#### 게시판은 크게 3개로 분류 됩니다.
+
+#### 자유게시판은 유저들끼리 자유롭게 정보를 공유하고 의견을 나누는 목적으로 만들었습니다.
+
+#### 면접후기는 유저들이 면접을 보고 난 후 후기나 정보를 공유하는 목적으로 만들었습니다.
+
+#### 질문게시판은 궁금한 점이 있는 유저들을 위해 만들었습니다.
+
+## 게시판 페이지네이션
+
+#### 게시글들은 기본적으로 페이지네이션을 지원합니다. 게시글이 많을 경우 페이지로 나눴습니다.
+
+!["스터디 게시판 페이지네이션"](img/시연시나리오/시연시나리오26_게시판_페이지네이션.JPG)
+
+## 게시글 검색
+
+#### 게시글들은 각각 기준에 따라 검색이 가능합니다.
+
+#### 먼저 제목검색입니다.
+
+!["스터디 게시글 검색 제목"](img/시연시나리오/시연시나리오26_제목_검색.JPG)
+
+#### 그 다음 작성자 검색입니다.
+
+!["스터디 게시글 검색 작성자](img/시연시나리오/시연시나리오26_작성자_검색.JPG)
+
+#### 제목+ 내용으로도 검색이 가능합니다. 제목과 내용 어디든 키워드가 존재한다면 검색이 됩니다.
+
+## 게시글 상세조회
+
+!["스터디 게시글 상세조회"](img/시연시나리오/시연시나리오28_게시글_상세조회.JPG)
+
+#### 게시글 목록에서 게시글을 클릭하면 게시글 상세조회 페이지로 가게 됩니다.
+
+## 게시글 좋아요
+
+#### 마음에 드는 게시글에 '좋아요'를 누를 수 있습니다.
+
+!["스터디 게시글 좋아요 전"](img/시연시나리오/시연시나리오27_게시글_좋아요_전.JPG)
+
+#### 좋아요를 누르게 되면 이후 보여드릴 마이페이지에서 좋아요한 게시글들을 모아보실 수 있습니다.
+
+!["스터디 게시글 좋아요 후"](img/시연시나리오/시연시나리오27_게시글_좋아요.JPG)
+
+## 게시글 댓글
+
+#### 스터디 게시판과 동일하게 댓글을 작성 할 수 있습니다.
+
+!["스터디 게시글 댓글"](img/시연시나리오/시연시나리오27_게시글%20댓글%20작성.JPG)
+
+#### 또한 댓글에도 좋아요를 누를 수 있습니다.
+
+!["스터디 댓글 좋아요"](img/시연시나리오/시연시나리오28_게시글%20댓글%20좋아요.JPG)
+
+#### 댓글에는 대댓글이 존재합니다.
+
+!["스터디 대댓글 목록"](img/시연시나리오/시연시나리오28_게시글%20대댓글%20보기.JPG)
+
+#### 위 버튼을 누르면 대댓글을 작성할 수 있는 부분이 등장합니다.
+
+!["스터디 댓글 좋아요"](img/시연시나리오/시연시나리오28_게시글_대댓글_작성.JPG)
+
+#### 댓글에 대댓글을 작성할 수 있게 됩니다.
+
+!["스터디 대댓글 작성"](img/시연시나리오/시연시나리오28_게시글_대댓글_작성후.JPG)
+
+# 마이페이지
+
+#### 마이페이지에서는 나와 관련 정보들을 조회하고 수정할 수 있습니다.
+
+## 닉네임 변경
+
+#### 마이페이지 첫화면에 들어가게 되면 프로필 배경과 닉네임을 볼 수 있는 페이지가 나옵니다.
+
+!["시연시나리오_닉네임_변경"](img/시연시나리오/시연시나리오29_닉네임변경전.JPG)
+
+#### 해당페이지에서 닉네임을 수정 할 수 있습니다.
+
+#### 닉네임 입력창 아래에 중복확인을 통해 닉네임 중복여부를 검사해야만 수정이 반영됩니다.
+
+!["시연시나리오_닉네임_변경"](img/시연시나리오/시연시나리오29_닉네임_중복확인.JPG)
+
+!["시연시나리오 닉네임 변경"](img/시연시나리오/시연시나리오29_닉네임변경후.JPG)
+
+## 배경 변경
+
+#### 닉네임 변경 하단에 있는 부분은 프로필을 확인하고 변경하는 부분입니다.
+
+!["시연시나리오_배경"](img/시연시나리오/시연시나리오30_프로필변경.JPG)
+
+#### 하단에 있는 부분을 클릭하여 원하는 프로필과 배경을 변경 할 수 있습니다.
+
+!["시연시나리오_배경"](img/시연시나리오/시연시나리오30_배경변경.JPG)
+
+#### 프로필과 배경을 변경한 후 저장버튼을 눌러야 반영됩니다.
+
+!["시연시나리오_배경"](img/시연시나리오/시연시나리오30_배경변경저장.JPG)
+
+!["시연시나리오_배경"](img/시연시나리오/시연시나리오30_배경변경완료.JPG)
+
+## 내 스터디
+
+#### 내 스터디 항목에서는 내가 가입된 스터디나 스터디장인 스터디들이 표시됩니다.
+
+!["시연시나리오_내스터디"](img/시연시나리오/시연시나리오31_내스터디.JPG)
+
+## 찜한 스터디
+
+#### 찜한 스터디 항목에서는 내가 찜한 스터디들이 표시됩니다.
+
+!["시연시나리오_찜한스터디"](img/시연시나리오/시연시나리오32_스터디_찜목록.JPG)
+
+#### 스터디 찜기능은 스터디 카드뷰를 볼 수 있는 어느 곳에서나 상단위 북마크 표시를 통해 할 수 있습니다.
+
+!["시연시나리오_찜한스터디](img/시연시나리오/시연시나리오32_스터디_카드뷰찜.JPG)
+
+!["시연시나리오_찜한스터디"](img/시연시나리오/시연시나리오32_스터디_카드뷰찜완료.JPG)
+
+## 내 쪽지함
+
+#### 저희는 유저들끼리의 원활한 소통을 위해 쪽지 기능을 지원합니다.
+
+#### 사이트 어디서나 유저 프로필을 볼 수 있는 곳에서 쪽지를 보낼 수 있습니다.
+
+!["시연시나리오_쪽지드롭"](img/시연시나리오/시연시나리오37_쪽지_드롭.JPG)
+
+#### 쪽지 보내기를 누르면 이러한 쪽지 작성창을 볼 수 있습니다.
+
+!["시연시나리오_쪽지작성"](img/시연시나리오/시연시나리오37_쪽지보내기.png)
+
+#### 다시 마이페이지로 돌아와 각각 받은 쪽지함, 보낸쪽지함이 존재하며 쪽지를 클릭했을시에 쪽지를 상세하게 볼 수 있습니다.
+
+!["시연시나리오_받은쪽지함"](img/시연시나리오/시연시나리오37_받은쪽지함.png)
+
+!["시연시나리오_보낸쪽지함"](img/시연시나리오/시연시나리오37_보낸쪽지함.png)
+
+!["시연시나리오_쪽지상세보기"](img/시연시나리오/시연시나리오37_쪽지상세보기.png)
+
+## 내 캘린더
+
+#### 내 캘린더는 유저의 개인 일정을 등록하고 볼 수 있는 곳입니다.
+
+!["시연시나리오_내캘린더"](img/시연시나리오/시연시나리오33_내캘린더_일정.JPG)
+
+#### 내캘린더 우측 하단에 있는 '일정 추가' 버튼을 통해 일정을 추가 할 수 있습니다.
+
+!["시연시나리오_내캘린더"](img/시연시나리오/시연시나리오33_내캘린더_일정_추가.JPG)
+
+#### 또한 내 캘린더에는 내가 가입된 스터디에 한해 스터디에 속해 있는 일정 또한 볼 수 있습니다.
+
+!["시연시나리오_내캘린더"](img/시연시나리오/시연시나리오33_내캘린더_스터디.JPG)
+
+#### 내가 등록한 일정들을 간편하게 수정할 수 있습니다.
+
+!["시연시나리오_내캘린더"](img/시연시나리오/시연시나리오33_내캘린더_일정_수정.JPG)
+!["시연시나리오_내캘린더"](img/시연시나리오/시연시나리오33_내캘린더_일정_수정_모달.JPG)
+
+#### 또한 내가 등록한 일정은 삭제도 가능합니다.
+
+!["시연시나리오_내캘린더](img/시연시나리오/시연시나리오33_내캘린더_일정_삭제.JPG)
+
+## 내가 쓴 글
+
+#### 내가 쓴 글에서는 내가 커뮤니티에 썼던 글들을 게시판 별로 볼 수있습니다.
+
+!["시연시나리오_내가쓴글"](img/시연시나리오/시연시나리오34_내가쓴글.JPG)
+
+## 내가 좋아요 한 글
+
+#### 내가 좋아요 글에서는 내가 커뮤니티에서 좋아요 했던 글들을 게시판 별로 볼 수있습니다.
+
+!["시연시나리오_내가좋아요한글"](img/시연시나리오/시연시나리오34_내가좋아요한글.JPG)
+
+## 내가 댓글 단 글
+
+#### 내가 댓글 단 글에서는 내가 커뮤니티에서 댓글을 달았던 게시글들을 볼 수 있습니다.
+
+!["시연시나리오_내가댓글단글"](img/시연시나리오/시연시나리오34_내가댓글단글.JPG)
+
+## 탈퇴하기
+
+#### 탈퇴하기를 통해 회원을 탈퇴할 수 있습니다.
+
+#### 탈퇴할 경우 커뮤니티에 써있는 게시글들이 전부 삭제되며 작성한 댓글들은 전부 익명처리됩니다. 또한 가입되어있는 스터디 또한 전부 탈퇴됩니다.
+
+#### 스터디장을 하고 있는 스터디가 있다면 스터디장을 위임하거나 스터디를 삭제하기 전까지 탈퇴하지 못합니다.
+
+!["시연시나리오_탈퇴하기"](img/시연시나리오/시연시나리오35_탈퇴하기.JPG)
+
+!["시연시나리오_탈퇴하기"](img/시연시나리오/시연시나리오35_탈퇴하기_모달.JPG.JPG)
+
+# 알림
+
+## 상단 알림 아이콘
+
+#### 저희 사이트에서는 유저들과 상호작용할 수 있는 부분이 매우 많습니다.
+
+#### 따라서 이에 대한 편의를 제공하기 위해 알림기능을 제공합니다.
+
+#### 상단 종모양 아이콘을 이용합니다.
+
+!["시연시나리오_알림](img/시연시나리오/시연시나리오36_알림.JPG)
+
+## 알림 목록
+
+#### 알림 아이콘을 클릭할경우 알림목록이 보여지게 됩니다.
+
+#### 확인한 알림의 경우 회색이 됩니다.
+
+!["시연시나리오_알림"](img/시연시나리오/시연시나리오36_알림_목록.JPG)
+
+!["시연시나리오_알림](img/시연시나리오/시연시나리오36_알림_목록_더보기.JPG)
+
+#### 알림을 클릭(확인)할경우 해당 알림에 해당하는 페이지로 이동하게 됩니다.
+
+!["시연시나리오_알림"](img/시연시나리오/시연시나리오36_알림_클릭.JPG)
+!["시연시나리오_알림"](img/시연시나리오/시연시나리오36_알림_클릭_이동.JPG)
+
+#### 알림을 전부 확인했다면 종모양 아이콘이 변합니다.
+
+!["시연시나리오_알림"](img/시연시나리오/시연시나리오36_알림_없음.JPG)
